MISUV-8862 - Fixed text wraparound on gov-uk tags

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,3 +82,7 @@ $hmrc-assets-path: "/report-quarterly/income-and-expenses/view/assets/lib/hmrc-f
 .display-none {
   display: none;
 }
+
+.govuk-tag {
+    max-width: none;
+}
